# optimus

./: .coveragerc  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .spelling  CLAUDE.md  CONTRIBUTING.MD  FSM_AUDIT_REPORT.md  HISTORY.md  MODIUS_OPTIMUS_DEVELOPER_GUIDE.docx  Makefile  Merge_Readme.md  NETWORK_RESILIENCE_AUDIT.md  OPTIMUS_MODIUS_COMPREHENSIVE_GUIDE.docx  OPTIMUS_MODIUS_MASTER_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TECHNICAL_DIAGRAMS.md  assets.json  basius_launch.md  check_agent_runner.py  config-mapping.json  entitlements.plist  fsm_specification.yaml  gitleaks_solve.py  ignore_gitleaks.py  pyproject.toml  run_agent.sh  run_service.sh  safe_api_fix.py  safe_api_proxy_routing.md  sample.env  test.json  tox.ini  update_gitleaksignore.py
.github/workflows/: main_workflow.yml  push-docker-images.yml  release.yaml  snyk-security.yml  synk_security.yaml  temporary_workflow.yml
audit-reports/: FSM_AUDIT_REPORT.md  NETWORK_RESILIENCE_AUDIT.md
data/: funding_events.json  memeooorr.db  whitelisted_assets.json
data/0x6aA9b180c1a4Ef43Ea540Da905f23BAfAEEB7CB5/: 0.json
liquidityRiskAssesmentScript/: Balancer_Readme.md  Uniswap_Readme.md  balalncer_fetch_pool_data_24h_volume.py  balalncer_fetch_pool_data_totalVolume.py  balancer_liquidity_risk_assesment_data.py  uniswap_liquidity_risk_assesment_data.py  uniswap_per_pool_liquidity_data.py  uniswap_top1000_pool_liquidity_data.py
logs/0x554D1444b6a38fA2eb18d86f2C10F42BE630c89D/: 0.json  1.json  2.json  3.json
mints/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  mapping.txt
optimus-ui-build/: index.html
pyinstaller/: optimus_bin.py
scripts/: aea-config-replace.py  api_data.json  bump.py  calculate_velodrome_tick_range.py  check_dependencies.py  check_doc_ipfs_hashes.py  compare_hashes.py  merkle_api.py  run_merkle_api.py
tests/: __init__.py
tests/customs/: __init__.py  conftest.py
tests/customs/asset_lending/: test_asset_lending.py
tests/customs/balancer_pools_search/: test_balancer_pools_search.py
tests/customs/max_apr_selection/: test_max_apr_selection.py
tests/customs/merkl_pools_search/: test_merkl_pools_search.py
tests/customs/uniswap_pools_search/: test_uniswap_pools_search.py
tests/customs/velodrome_pools_search/: test_velodrome_pools_search.py
tests/integration/: Makefile  PROTOCOL_SPECIFIC_FEATURES.md  PROTOCOL_TESTS_DOCUMENTATION.md  README.md  __init__.py  conftest.py  pytest.ini  run_integration_tests.py
tests/integration/audit/: conftest.py  optimus_test_audit_report.md  test_uniswap_v3_fork_e2e.py
tests/integration/fixtures/: __init__.py  contract_fixtures.py  mock_responses.py  pool_data_fixtures.py
tests/integration/protocols/: __init__.py
tests/integration/protocols/balancer/: __init__.py  test_balancer_components.py  test_balancer_contract_integration.py  test_balancer_e2e_workflows.py  test_balancer_transaction_generation.py  test_balancer_yield_calculations.py
tests/integration/protocols/base/: __init__.py  mock_contracts.py  protocol_test_base.py  test_helpers.py
tests/integration/protocols/staking/: README.md  __init__.py  run_staking_tests.py  test_checkpoint_mechanisms.py  test_kpi_compliance.py  test_staking_compliance.py  test_staking_integration.py  test_vanity_transactions.py
tests/integration/protocols/staking/fixtures/: __init__.py  staking_fixtures.py
tests/integration/protocols/uniswap_v3/: __init__.py  test_uniswap_v3_components.py  test_uniswap_v3_contract_integration.py  test_uniswap_v3_e2e_workflows.py  test_uniswap_v3_transaction_generation.py  test_uniswap_v3_yield_calculations.py
tests/integration/protocols/velodrome/: __init__.py  test_velodrome_components.py  test_velodrome_contract_integration.py  test_velodrome_e2e_workflows.py  test_velodrome_transaction_generation.py  test_velodrome_yield_calculations.py
velodrome/: Technical Documentation_ Velodrome Integration.txt
