[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "optimus"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[cli]==0.21.19",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-helpers==0.21.19",
    "open-aea==2.2.1",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    # App-repo: all other deps exact-pinned per @DavidMinarsch's #436 rule
    # (no silent supply chain). The bounded ranges below have a strict upper
    # bound — they're declared as ranges by the third-party skill YAMLs synced
    # into this repo, and `aea-helpers check-dependencies` requires the
    # pyproject form to satisfy the YAML form (asn1crypto / jsonschema /
    # protobuf). Each still has a hard upper cap on the major bump.
    "typing_extensions==4.15.0",
    "gql[requests]==3.5.0",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "py-ecc==8.0.0",
    "pytz==2022.2.1",
    "openapi-core==0.22.0",
    "openapi-spec-validator==0.7.2",
    "jsonschema<5.0.0,>=4.23.0",
    "hypothesis==6.21.6",
    "requests==2.32.5",
    "pycoingecko==3.2.0",
    # numpy: range exception (not exact-pinned). Locking to a single numpy
    # release breaks the Windows + Python 3.14 matrix because each py3.14
    # micro-version on the GH runners drops MINGW-W64 ABI compat with older
    # numpy wheels (access violation 0xC0000005 on import). Letting the
    # resolver pick the latest numpy keeps the Windows wheel current.
    "numpy>=2.2.6,<3",
    "pandas==2.3.3",
    "peewee==3.17.5",
    "google-generativeai==0.8.2",
    "w3multicall==0.3.1",
    "pydantic==2.13.0",
    "multiaddr==0.0.9",
    "protobuf<6,>=5",
    "pycryptodome==3.20.0",
    "certifi==2026.2.25",
    "hexbytes==1.3.1",
    # pyinstaller is a build tool, kept at runtime for the agent_runner_bin spec.
    "pyinstaller==6.19.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/optimus"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@01ecfd5b2b68021bc94b76d9581eb3944bbd41b2",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# Third-party packages on disk are synced from open-autonomy + open-aea
# (auto-prepended) plus mech-interact, genai, kv-store, funds-manager.
upstream_pins = [
    "valory-xyz/mech-interact@v0.28.0",
    "valory-xyz/genai@v6.1.0",
    "valory-xyz/kv-store@v0.4.0",
    "valory-xyz/funds-manager@v2.3.0",
]
# Vite UI bundle outputs (modius-ui-build/, optimus-ui-build/) trip
# generic-api-key on every rebuild. Pattern matches both the current
# location (packages/valory/skills/optimus_abci/<name>-ui-build/) and
# the historical top-level location.
gitleaks_extra_paths = [
    ".*-ui-build/.*",
    ".*-ui/assets/.*",
    "packages/valory/skills/.*_abci/behaviours\\.py",
]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@01ecfd5b2b68021bc94b76d9581eb3944bbd41b2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
markers = [
    "integration: marks integration tests which require other network services",
    "e2e: marks end-to-end agent tests",
]
filterwarnings = ["ignore::DeprecationWarning:aea.*:"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
