[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "optimus"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[cli]==0.21.26",
    "open-aea-test-autonomy==0.21.26",
    "open-aea-helpers==0.21.26",
    "open-aea==2.2.9",
    "open-aea-ledger-ethereum==2.2.9",
    "open-aea-ledger-cosmos==2.2.9",
    "typing_extensions==4.15.0",
    "gql[requests]==3.5.0",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "py-ecc==8.0.0",
    "pytz==2022.2.1",
    "openapi-core==0.22.0",
    "openapi-spec-validator==0.7.2",
    "jsonschema<5.0.0,>=4.23.0",
    "hypothesis==6.21.6",
    "requests==2.32.5",
    "pycoingecko==3.2.0",
    "numpy>=2.2.6,<3",
    "pandas==2.3.3",
    "peewee==3.17.5",
    "google-generativeai==0.8.2",
    "w3multicall==0.3.1",
    "pydantic==2.13.0",
    "multiaddr==0.0.9",
    "protobuf<6,>=5",
    "pycryptodome==3.20.0",
    "certifi==2026.2.25",
    "hexbytes==1.3.1",
    "pyinstaller==6.19.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/optimus"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@v0.7.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
service_specific_packages_exclude = [
    "packages/valory/customs/velodrome_pools_search",
    "packages/valory/customs/asset_lending",
    "packages/valory/customs/balancer_pools_search",
    "packages/valory/customs/uniswap_pools_search",
    "packages/valory/customs/max_apr_selection",
    "packages/valory/contracts/uniswap_v3_pool",
]
upstream_pins = [
    "valory-xyz/mech-interact@v0.32.4-rc2",
    "valory-xyz/mech@v0.34.2-rc2",
    "valory-xyz/genai@v7.2.2",
    "valory-xyz/kv-store@feat/bump-open-aea-2.2.9-open-autonomy-0.21.26",
    "valory-xyz/funds-manager@v3.1.2",
]
gitleaks_extra_paths = [
    "packages/valory/skills/.*_abci/.*-ui-build/.*",
    "packages/valory/skills/.*_abci/.*-ui/assets/.*",
]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@v0.7.0"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
